--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# ignore gitignore
+!.gitignore
+
+
 # Distribution / packaging
-.gitignore
+
 .Python
 build/
 develop-eggs/
